--- a/index.html
+++ b/index.html
@@ -1,26 +1,38 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="estilo/style.css" media="screen">
     <meta charset="UTF-8">
+    <link rel="shortcut icon" href="imagem/favicon-32x32.png" type="image/x-icon">
     <title>jefferson silva</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-<body>
-    
-    <nav>
-    <a href="#">Sobre</a>
-    <a href="#">Projetos</a>
-    <a href="#">Loja</a>
-    </nav>
+<body>  
 
-    <header>
-        <img src="imagem/banner.png" alt="Logo">
-    </header>
+<header>
+<div class= "navegacao"> 
+    <a href="sobre.html">sobre</a>
+    <a href="projetos.html">projetos</a>
+    <a href="index.html"><img src="imagem/logo.png" alt="logotipo"></a>
+    <a href="loja.html">loja</a>
+    <a href="contato.html">contato</a>
+</div>
 
-    <article>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi veritatis sunt corporis totam harum nihil id facilis sequi laborum itaque nulla, dolorem commodi fuga, quod animi facere? Esse, nobis deserunt. Lorem ipsum dolor sit amet consectetur, adipisicing elit. At officia error, praesentium officiis deleniti ut impedit amet repellendus veniam ea perferendis accusamus porro similique iusto cumque, culpa minima ratione! Commodi. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Impedit odio ducimus sit quibusdam ipsum cum est tempore, quaerat libero eum doloribus fuga. Omnis ab laboriosam assumenda. At quibusdam nostrum cupiditate?
-    </article>
+<div class= "banner">
+    <img src="imagem/banner.png" alt="banner">
+</div>
+
+</header>
+
+<article>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet fugiat accusamus ipsum veritatis dolorum animi, at ea natus deserunt itaque eos labore possimus voluptatem inventore minus voluptas ex illum aut! Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem corrupti ducimus quam quod libero. Incidunt distinctio similique quo. Excepturi enim hic eius, omnis culpa veritatis? Vel dolores enim obcaecati. Enim?
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur iusto quo obcaecati fugiat beatae. Tenetur esse consequuntur mollitia distinctio reprehenderit asperiores, beatae explicabo officiis eum facilis consequatur, quaerat deserunt error.
+</p>
+</article>
+
 
 
 </body>
