--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 </div>
 
 <div class= "banner">
-    <img src="imagem/banner.png" alt="banner">
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse vitae nulla deserunt officia sint sed fugiat minus, at numquam ut. Molestias quod doloribus mollitia cumque soluta quasi magni laudantium laborum.
 </div>
-
 </header>
+
 
 <article>
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet fugiat accusamus ipsum veritatis dolorum animi, at ea natus deserunt itaque eos labore possimus voluptatem inventore minus voluptas ex illum aut! Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem corrupti ducimus quam quod libero. Incidunt distinctio similique quo. Excepturi enim hic eius, omnis culpa veritatis? Vel dolores enim obcaecati. Enim?
